fix: make down info visible on GitHub Pages

--- a/cv.css
+++ b/cv.css
@@ -133,7 +133,7 @@ aside .photo img {
   width: 640px;
   padding: 0 40px;
   background-color: #f5f5f5;
-  margin-bottom: 30px;
+  padding-bottom: 30px;
 }
 
 header{
